--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.2.4",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@fontsource/poppins": "^4.5.8",
     "@prisma/client": "4.0.0",
     "bcrypt": "^5.0.1",
+    "framer-motion": "^6",
+    "i18next": "^21.8.16",
+    "i18next-browser-languagedetector": "^6.1.4",
     "jsonwebtoken": "^8.5.1",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^11.18.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
