--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11",
     "@fontsource/poppins": "^4.5.8",
     "@prisma/client": "4.0.0",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "formik": "^2.2.9",
     "framer-motion": "^6",
     "i18next": "^21.8.16",
     "i18next-browser-languagedetector": "^6.1.4",
