--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "4.0.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "cookies": "^0.8.0",
     "formik": "^2.2.9",
     "framer-motion": "^6",
     "i18next": "^21.8.16",
@@ -26,14 +27,17 @@
     "react-dom": "18.2.0",
     "react-i18next": "^11.18.3",
     "react-icons": "^4.4.0",
+    "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookies": "^0.7.7",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
     "prisma": "^4.0.0",
