--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ DATABASE_URL=""
 SHADOW_DATABASE_URL=""
 JWT_SECRET=""
 NEXT_PUBLIC_API_URL="http://localhost:3000"
+MAILJET_SECRET_KEY=""
+MAILJET_API_KEY=""
