--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "jsonwebtoken": "^8.5.1",
     "next": "12.2.0",
+    "nodemailer": "^6.7.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^11.18.3",
@@ -35,6 +36,7 @@
     "@types/cookies": "^0.7.7",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "18.0.0",
+    "@types/nodemailer": "^6.4.5",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/uuid": "^8.3.4",
