--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,8 @@ DATABASE_URL=""
 SHADOW_DATABASE_URL=""
 JWT_SECRET=""
 NEXT_PUBLIC_API_URL="http://localhost:3000"
-MAILJET_SECRET_KEY=""
-MAILJET_API_KEY=""
+SMTP_HOST=""
+SMTP_PORT=587
+SMTP_USER=""
+SMTP_PASS=""
+CLIENT_URL="http://localhost:3000"
